--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_list.html
@@ -28,8 +28,8 @@
 					<td>{{ article.track_ids }}</td>
 
 					<td style="width: auto;">
-						<a class="btn btn-primary" href="/biblioteca_sistedes/article_update/{{ article.id }}">Editar</a>
-						<a class="btn btn-danger" href="/biblioteca_sistedes/article_delete/{{ article.id }}">Eliminar</a>
+						<a class="btn btn-primary" href="/biblioteca_sistedes/article_update/{{ article.id }}/">Editar</a>
+						<a class="btn btn-danger" href="/biblioteca_sistedes/article_delete/{{ article.id }}"/>Eliminar</a>
 					</td>
 				</tr>
 				{% endfor %}
