--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
@@ -64,9 +64,10 @@
                     <ul class="dropdown-menu" id="arrow-menu" >
                         <br/>
                         <div style="border-top: 3px solid #006696; float: right; width: 150px; height: 4px;"></div><br/>
-                        <li style ="font-size: 13px;"><a tabindex="-1" href="/biblioteca">Mis conferencias</a></li><br/>
-                        <li style ="font-size: 13px;"><a tabindex="-1" href="#">Mis ediciones</a></li><br/>
-                        <li style ="font-size: 13px;"><a tabindex="-1" href="#">Mis tracks</a></li><br/>
+                        <li style ="font-size: 13px;"><a tabindex="-1" href="/biblioteca/conference_list/">Mis conferencias</a></li><br/>
+                        <li style ="font-size: 13px;"><a tabindex="-1" href="/biblioteca/edition_list/">Mis ediciones</a></li><br/>
+                        <li style ="font-size: 13px;"><a tabindex="-1" href="/biblioteca/track_list/">Mis tracks</a></li><br/>
+                        <li style ="font-size: 13px;"><a tabindex="-1" href="/biblioteca/user_create/">Registrar usuario</a></li><br/>
                         <li style ="font-size: 13px;"><a tabindex="-1" href="/biblioteca/logout/">Cerrar sesion</a></li><br/>
                     </ul>
                 </li>
