--- a/biblioteca_sistedes/templates/biblioteca_sistedes/edition_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/edition_list.html
@@ -1,6 +1,9 @@
 {% extends 'biblioteca_sistedes/base_form.html' %}
 {% block container %}
 		<h2><u> Ediciones </u></h2>
+		Buscador: <input id="myInput" type="text" onkeyup="search_table()">
+		</br>
+		</br>
 		<input id="myInput"type="text" onkeyup="search_table()">
 		<table id="myTable">
 			<thead>
@@ -23,8 +26,8 @@
 					<td ><div style="width: 200px; height: auto; overflow: auto">{{ edition.conference_id.name }}</div></td>
 
 					<td style="width: auto;">
-						<a class="btn btn-primary" href="/biblioteca_sistedes/edition_update/{{ edition.id }}">Editar</a>
-						<a class="btn btn-danger" href="/biblioteca_sistedes/edition_delete/{{ edition.id }}">Eliminar</a>
+						<a class="btn btn-primary" href="/biblioteca/edition_update/{{ edition.id }}/">Editar</a>
+						<a class="btn btn-danger" href="/biblioteca/edition_delete/{{ edition.id }}/">Eliminar</a>
 					</td>
 				</tr>
 				{% endfor %}
