--- a/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
@@ -1,8 +1,9 @@
-{% extends 'biblioteca_sistedes/base.html' %}
-
-{% block content %}
+{% extends 'biblioteca_sistedes/base_form.html' %}
+{% block container %}
 		<h2><u> Palabras clave </u></h2>
-		<input id="myInput"type="text" onkeyup="search_table()">
+		Buscador: <input id="myInput" type="text" onkeyup="search_table()">
+		</br>
+		</br>
 		<table id="myTable">
 			<thead>
 				<tr>
@@ -20,8 +21,8 @@
 					<td ><div style="width: 500px; height: auto; overflow: auto">{{ key.name }}</div></td>
 
 					<td style="width: auto;">
-						<a class="btn btn-primary" href="/biblioteca/keyword_update/{{ key.id }}">Editar</a>
-						<a class="btn btn-danger" href="/biblioteca/keyword_delete/{{ key.id }}">Eliminar</a>
+						<a class="btn btn-primary" href="/biblioteca/keyword_update/{{ key.id }}/">Editar</a>
+						<a class="btn btn-danger" href="/biblioteca/keyword_delete/{{ key.id }}/">Eliminar</a>
 					</td>
 				</tr>
 				{% endfor %}
