--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
@@ -43,45 +43,45 @@
         <nav id="menu-principal" class="c c-1-2-e c-last c-right" style="margin-left: -50px; display: inline;">
             <ul id="menu-principal-ul" class="nav menu">
                 <li class="elemento-principal">
-                    <a href="/biblioteca/">Inicio</a>
+                    <a href="/">Inicio</a>
                 </li>
                 <li class="elemento-principal">
-                    <a href="https://biblioteca.sistedes.es/noticias/">Noticias</a>
+                    <a href="/noticias/">Noticias</a>
                 </li>
                 <li class="elemento-principal">
-                    <a href="https://biblioteca.sistedes.es/biblioteca/">Acerca de la Biblioteca</a>
+                    <a href="/biblioteca/">Acerca de la Biblioteca</a>
                 </li>
                 <li class="elemento-principal">
-                    <a href="https://biblioteca.sistedes.es/contacto/">Contacto</a>
+                    <a href="/contacto/">Contacto</a>
                 </li>
                 {% if request.session.username %}
 
                 <li class="dropdown-submenu" >
-                    <a class="test"  tabindex="-1" href="#" onclick="dropdown()"> <i class="fa fa-user"></i> <i class="fa fa-caret-down" style="font-size:24px"></i><span
+                    <a class="test" id="user-menu" tabindex="-1" href="#" onclick="dropdown()"> <i class="fa fa-user"></i> <i class="fa fa-caret-down" style="font-size:24px"></i><span
                             class="caret"></span></a>
-                    <ul class="dropdown-menu" id="arrow-menu" >
+                    <ul id="arrow-menu" >
                             <div style="border-bottom: 3px solid #006696; float: right; width: 150px; height:30px; margin-top: 5px;">
                                 <span class="username">{{ request.session.username }}</span>
                             </div><br/>
-                        <div style="margin-top: 15px;">
+                        <div style="margin-top: 15px;" class="dropdown-menu">
                         {% if request.session.rol == 1 %}
-                            <li style ="font-size: 13px;"><a tabindex="-1" href="/biblioteca/conference_list/">Mis conferencias</a></li><br/>
+                            <li style ="font-size: 13px;"><a tabindex="-1" href="/conference_list/">Mis conferencias</a></li><br/>
                         {% endif %}
                         {% if request.session.rol == 1 or request.session.rol == 2%}
-                            <li style ="font-size: 13px;"><a tabindex="-1" href="/biblioteca/edition_list/">Mis ediciones</a></li><br/>
+                            <li style ="font-size: 13px;"><a tabindex="-1" href="/edition_list/">Mis ediciones</a></li><br/>
                         {% endif %}
-                            <li style ="font-size: 13px;"><a tabindex="-1" href="/biblioteca/track_list/">Mis tracks</a></li><br/>
+                            <li style ="font-size: 13px;"><a tabindex="-1" href="/track_list/">Mis tracks</a></li><br/>
                         {% if request.session.rol == 1 %}
-                            <li style ="font-size: 13px;"><a tabindex="-1" href="/biblioteca/user_create/">Registrar usuario</a></li><br/>
+                            <li style ="font-size: 13px;"><a tabindex="-1" href="/user_create/">Registrar usuario</a></li><br/>
                         {% endif %}
-                        <li style ="font-size: 13px;"><a tabindex="-1" href="/biblioteca/logout/">Cerrar sesion</a></li><br/>
+                        <li style ="font-size: 13px;"><a tabindex="-1" href="/logout/">Cerrar sesion</a></li><br/>
                         </div>
                     </ul>
                 </li>
 
                 {% else %}
                 <li class="elemento-principal">
-                    <a href="/biblioteca/getlogin/">Iniciar sesión</a>
+                    <a href="/getlogin/">Iniciar sesión</a>
                 </li>
                 {% endif %}
             </ul>
@@ -99,25 +99,25 @@
                 <ul id="tree1" class="treeview-famfamfam treeview" style="">
                     <li class="expandable first-hit-li">
                         <div class="hitarea first-hit"></div>
-                        <a href="/biblioteca/conferencias" class="conferencias-selected">Conferencias</a>
+                        <a href="/conferencias" class="conferencias-selected">Conferencias</a>
                         <ul class="children first-child">
 
                             {% for conference in conferences %}
                             <li class="expandable hit-{{ conference.domain }}-li">
                                 <div class="hitarea hit-{{ conference.domain }}-area"></div>
-                                <a href="/biblioteca/conferencias/{{ conference.domain }}/" class="{{ conference.domain }}">{{ conference.name }}</a>
+                                <a href="/conferencias/{{ conference.domain }}/" class="{{ conference.domain }}">{{ conference.name }}</a>
                                 <ul class="children child-{{ conference.domain }}">
                                     {% for edition in editions %}
                                     {% if edition.conference_id.id == conference.id%}
                                     <li class="expandable hit-{{ edition.conference_id.domain }}-{{ edition.year }}-li">
                                         <div class="hitarea hit-{{ edition.conference_id.domain }}-{{ edition.year }}-area" ></div>
-                                        <a href="/biblioteca/conferencias/{{ edition.conference_id.domain }}/{{ edition.year }}/" class="{{ edition.conference_id.domain }}-{{ edition.year }}">{{ edition.name }}</a>
+                                        <a href="/conferencias/{{ edition.conference_id.domain }}/{{ edition.year }}/" class="{{ edition.conference_id.domain }}-{{ edition.year }}">{{ edition.name }}</a>
                                         <ul class="children child-{{ edition.conference_id.domain }}-{{ edition.year }}">
                                             {% for track in tracks %}
                                             {% if track.edition_id.id == edition.id %}
 
                                             <li>
-                                                <a href="/biblioteca/conferencias/{{ edition.conference_id.domain }}/{{ edition.year }}/{{ track.id }}">{{ track.name }}</a>
+                                                <a href="/conferencias/{{ edition.conference_id.domain }}/{{ edition.year }}/{{ track.id }}">{{ track.name }}</a>
                                             </li>
                                             {% endif %}
                                             {% endfor %}
@@ -138,17 +138,17 @@
                 <ul id="tree2" class="treeview-famfamfam treeview">
                     <li class="expandable lastExpandable">
                         <div class="hitarea expandable-hitarea lastExpandable-hitarea"></div>
-                        <a href="https://biblioteca.sistedes.es/biblioteca/documentos-sistedes/" class="">Documentos
+                        <a href="#" class="">Documentos
                             SISTEDES</a>
                         <ul class="children" style="">
                             <li>
-                                <a href="https://biblioteca.sistedes.es/biblioteca/documentos-sistedes/boletin-de-noticias-de-sistedes/">Boletín
+                                <a href="#">Boletín
                                     de noticias de SISTEDES</a></li>
                             <li>
-                                <a href="https://biblioteca.sistedes.es/biblioteca/documentos-sistedes/documentacion-jisbd-2015/">Documentación
+                                <a href="#">Documentación
                                     JISBD 2015</a></li>
                             <li class="last"><a
-                                    href="https://biblioteca.sistedes.es/biblioteca/documentos-sistedes/articulos/">Informes
+                                    href="#">Informes
                                 técnicos</a></li>
                         </ul>
                     </li>
@@ -176,14 +176,14 @@
             <div id="buscadorSidebar">
                 <h2>Búsqueda</h2>
                 <div class="searchform">
-                    <form action="/biblioteca/" method="get">
+                    <form action="/" method="get">
                         <input name="s" id="search" value="" type="text">
                         <input alt="Buscar"
                                src="{% static 'biblioteca_sistedes/img/search.png' %}"
                                type="image">
                     </form>
                 </div>
-                <p style="margin-top: -15px;"><a href="/biblioteca/busqueda/">Búsqueda avanzada</a></p>
+                <p style="margin-top: -15px;"><a href="/busqueda/">Búsqueda avanzada</a></p>
             </div>
         </div>
         {% endblock %}
@@ -200,10 +200,10 @@
                         Este es&nbsp;el instrumento mediante el cual SISTEDES pone a disposición de sus socios y del
                         público en general los fondos documentales asociados a sus actividades. En particular, y como
                         principal valor, esta biblioteca contiene, en la actualidad parcialmente, el <a
-                                href="/biblioteca/conferencias/">archivo de actas</a> de las Jornadas SISTEDES,
+                                href="#">archivo de actas</a> de las Jornadas SISTEDES,
                         celebradas desde 2006. El archivo incluirá, además, las actas de las diferentes jornadas
                         precedentes, que se remontan hasta 1996. Adicionalmente, la biblioteca contiene los <a
-                                href="/biblioteca/documentos-sistedes/">documentos </a>de producción propia como
+                                href="#">documentos </a>de producción propia como
                         informes, anuarios, etc. Puede consultarse igualmente el <a
                                 href=""
                                 target="_blank" rel="noopener" title="este enlace se abrirá en una ventana emergente">Boletín
