--- a/biblioteca_sistedes/templates/biblioteca_sistedes/login.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/login.html
@@ -13,7 +13,7 @@
     <!-- Content -->
     <div id="content" class="colM">
         <div id="content-main">
-            <form action="/biblioteca/login/" method="post" id="login-form">{% csrf_token %}
+            <form action="/login/" method="post" id="login-form">{% csrf_token %}
                 <input type="hidden">
                 <div class="form-row">
                     <label class="required" for="id_username">Username:</label> <input type="text" name="username"
