--- a/biblioteca_sistedes/templates/biblioteca_sistedes/author_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/author_list.html
@@ -24,8 +24,8 @@
 					<td>{{ author.last_name }}</td>
 
 					<td style="width: auto;">
-						<a class="btn btn-primary" href="/biblioteca_sistedes/author_update/{{ author.id }}/">Editar</a>
-						<a class="btn btn-danger" href="/biblioteca_sistedes/author_delete/{{ author.id }}/">Eliminar</a>
+						<a class="btn btn-primary" href="/author_update/{{ author.id }}/">Editar</a>
+						<a class="btn btn-danger" href="/author_delete/{{ author.id }}/">Eliminar</a>
 					</td>
 				</tr>
 				{% endfor %}
