--- a/biblioteca_sistedes/static/biblioteca_sistedes/css/table_style.css
+++ b/biblioteca_sistedes/static/biblioteca_sistedes/css/table_style.css
@@ -2,6 +2,7 @@
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    text-align: center;
 }
 
 #myTable td, #myTable th {
@@ -16,7 +17,7 @@
 #myTable th {
     padding-top: 12px;
     padding-bottom: 12px;
-    text-align: left;
+    text-align: center;
     background-color: #006696;
     color: white;
 }
