--- a/biblioteca_sistedes/templates/biblioteca_sistedes/track_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/track_list.html
@@ -23,8 +23,9 @@
 					<td>{{ track.edition_id.name }}</td>
 
 					<td style="width: auto;">
-						<a class="btn btn-primary" href="/biblioteca/track_update/{{ track.id }}/">Editar</a>
-						<a class="btn btn-danger" href="/biblioteca/track_delete/{{ track.id }}/">Eliminar</a>
+                        <a class="btn btn-primary" href="/track_view/{{ track.id }}/">Ver</a>
+						<a class="btn btn-primary" href="/track_update/{{ track.id }}/">Editar</a>
+						<a class="btn btn-danger" href="/track_delete/{{ track.id }}/">Eliminar</a>
 					</td>
 				</tr>
 				{% endfor %}
